# raspi_sensing

./: Cargo.toml  api.go  client.py  go.mod  go.sum  index.html
arduino/: ard_code.ino
src/: main.rs
