[package]
name = "raspi_sensing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
scylla = "0.13.0"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "v1"] }
chrono = "0.4"


[profile.release]
opt-level = 3  # Maximum optimization
lto = true     # Enable Link Time Optimization
codegen-units = 1  # Single codegen unit for better optimization
panic = 'abort'  # Reduce binary size and improve performance by not including unwinding code
debug=true